<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Password Assistant!</string>
    <string name="app_name">万能密码助手</string>
    <string name="txt_header">Header</string>
    <string name="img_add_desc">添加</string>
    <string name="add_grp">添加分组</string>
    <string name="txt_img_description">图片</string>
    <string name="group_tool_add">添加</string>
    <string name="group_tool_check">选择</string>
    <string name="tool_add">添加</string>
    <string name="tool_list">列表</string>
    <string name="tool_check">操作</string>
    <string name="tool_recycle">回收站</string>
    <string name="tool_select_all">所有</string>
    <string name="tool_select_none">无</string>
    <string name="tool_remove">删除</string>
    <string name="tool_share">分享</string>
    <string name="tool_restore">恢复</string>
    <string name="btn_save">保存</string>
    <string name="txt_add_more">保存后继续添加</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_submit">提交</string>
    <string name="btn_edit">编辑</string>
    <string name="btn_unlock">解锁</string>
    <string name="txt_feedback_rating">10</string>
    <string name="txt_feedback_responsiveness">Responsiveness</string>
    <string name="txt_feedback_great_design">Great Design</string>
    <string name="txt_feedback_intuitive_user_experience">Intuitive User Experience</string>
    <string name="txt_feedback_security">Security</string>
    <string name="txt_feedback_context">Understanding context of your user</string>
    <string name="txt_feedback_usability">Usability</string>
    <string name="txt_feedback_message">建议</string>
    <string name="txt_feedback_email">Email</string>
    <string name="txt_groupTitle">请输入分组名称</string>
    <string name="txt_groupDesc">请输入描述</string>
    <string name="txt_groupName">分组1</string>
    <string name="txt_group_key">10</string>
    <string name="prompt_group">选择分组</string>
    <string name="prompt_template">选择模板</string>
    <string name="txt_select_group">选择分组</string>
    <string name="txt_keyTitle">标题</string>
    <string name="txt_key_username">用户名</string>
    <string name="txt_key_password">密码</string>
    <string name="txt_key_url">链接</string>
    <string name="txt_key_securityQuestion">请输入密保问题</string>
    <string name="txt_key_securityAnswer">请输入密保答案</string>
    <string name="txt_keyName">Key 1</string>
    <string name="txt_add_key">添加新密码</string>
    <string name="txt_setting_header">设置</string>
    <string name="txt_password_display">显示密码</string>
    <string name="txt_setting_on">ON</string>
    <string name="txt_setting_off">OFF</string>
    <string name="txt_setting_group_search_enable">搜索分组</string>
    <string name="txt_setting_key_search_enable">搜索密码</string>
    <string name="txt_setting_copy_out_app">应用外复制</string>
    <string name="txt_setting_set_app_lock">应用锁定</string>
    <string name="txt_setting_old_master_key">请输入原管理密码</string>
    <string name="txt_setting_new_master_key">请输入新管理密码</string>
    <string name="txt_setting_confirm_master_key">请重复输入新管理密码</string>
    <string name="txt_username">用户名</string>
    <string name="txt_password">密码</string>
    <string name="txt_securityAnswer">密保答案</string>
    <string name="txt_url">链接</string>
    <string name="txt_login">管理密码</string>
    <string name="txt_login_text1">Password</string>
    <string name="txt_login_text2">Assistant</string>
    <string name="txt_set_master_key">设置管理密码</string>
    <string name="txt_group">分组</string>
    <string name="txt_key">密码</string>
    <string name="txt_setting">工具</string>
    <string name="txt_help">帮助</string>
    <string name="txt_feedback">反馈</string>
    <string name="txt_exit">退出</string>
    <string name="txt_add_group">添加</string>
    <string name="txt_add_key1">添加</string>
    <string name="txt_select">操作</string>
    <string name="txt_overview_3">"需要为你的密码添加更多的信息吗?只需要为相应模板添加条目即可,不同的密码可以使用不同的模板."</string>
    <string name="txt_overview_4.1">"• 可是设置显示或隐藏密码.
• 轻松搜索分组和密码.
• 可以拒绝密码复制到应用外."</string>
    <string name="txt_overview_4.2">• 您可以选择备份当前数据以防止误删除时恢复.</string>
    <string name="txt_overview_4.3">• 删除的密码分组将会首先保存到回收站，可随时恢复.</string>
    <string name="txt_overview_4.4">• 自定义密码模板功能.</string>
    <string name="txt_overview_4.5">• 通过管理密码锁定万能密码助手，只需要记住一个管理密码，剩下的请交给我们.</string>
    <string name="txt_faq_1">如何添加新的分组?</string>
    <string name="txt_faq_ans_1">点击右上角的更多按钮，显示工具条，点击工具条上的“添加”按钮即可.</string>
    <string name="txt_faq_2">如何在一个分组中添加密码?</string>
    <string name="txt_faq_ans_2">点击相应分组进入该分组，然后点击工具条上的“添加”按钮即可开始添加.</string>
    <string name="txt_faq_3">怎样给一个密码添加更多的信息呢?</string>
    <string name="txt_faq_ans_3">使用自定义密码模板!可以为不同的密码订制不同的模板，模板可以自定义条目，打造个性化密码，然后为相应密码选择合适的模板.</string>
    <string name="txt_faq_4">如何创建密码模板?</string>
    <string name="txt_faq_ans_4">在工具页使用“密码模板”选项，并完成模板添加.</string>
    <string name="txt_faq_5">如何访问密码对应的网址?</string>
    <string name="txt_faq_ans_5">两种方式.（1）点击"url"按钮，将用自带浏览器打开链接，并自动填入用户名密码。（2）长按"url"，使用你手机自带浏览器打开链接.</string>
    <string name="txt_faq_6">怎么恢复已删除的分组和密码呢?</string>
    <string name="txt_faq_ans_6">使用回收站，你可是在回收站中找到所有被删除的分组和密码，并可以恢复.</string>
    <string name="txt_faq_7">如果我想锁定万能密码助手（PA）, 除了我别人不能打开怎么办?</string>
    <string name="txt_faq_ans_7">请设置管理密码，为了您的密码安全，我们建议您尽快设置管理密码，在工具中“设置管理密码”中设置，以防密码丢失.</string>
    <string name="txt_faq_8">忘记管理密码怎么办?</string>
    <string name="txt_faq_ans_8">不用担心，可以点击“忘记密码”，通过正确回答密保问题获得密码.</string>
    <string name="txt_faq_9">如何将将万能密码助手中的密码信息分享给别人呢?</string>
    <string name="txt_faq_ans_9">万能密码助手（PA）允许您分享自己的密码，在工具条中找到share按钮，可以通过短信，微信，邮件，qq等常用方式分享给你的好友.</string>
    <string name="txt_faq_10">不想密码信息被复制到应用之外怎么办?</string>
    <string name="txt_faq_ans_10">默认是禁止应用外复制的，也可以在工具页中找到“应用外复制”，设置为“OFF”.</string>
    <string name="txt_faq_11">是否可以备份?</string>
    <string name="txt_faq_ans_11">当然可以，在工具中找到备份即可.</string>
    <string name="dialog_exit_title">退出?</string>
    <string name="dialog_exit_msg">确定要退出吗?</string>
    <string name="toast_group_created">分组创建成功!</string>
    <string name="dialog_duplicate_group_title">拷贝分组!</string>
    <string name="dialog_duplicate_group_msg">分组命名重复.</string>
    <string name="dialog_delete_group_title">删除分组!</string>
    <string name="dialog_delete_group_msg">该分组非空,确定要删除吗?</string>
    <string name="dialog_group_general_delete_msg">默认分组无法删除,请不要选中.</string>
    <string name="dialog_group_no_selection_found_msg">请选择分组.</string>
    <string name="toast_key_created">密码创建成功!</string>
    <string name="dialog_duplicate_key_title">拷贝密码!</string>
    <string name="dialog_duplicate_key_msg">密码命名重复.</string>
    <string name="dialog_delete_key_title">删除密码!</string>
    <string name="dialog_delete_key_msg">确定要删除此密码吗?</string>
    <string name="dialog_key_no_selection_found_msg">请先选择密码.</string>
    <string name="toast_username_copied">用户名已复制!</string>
    <string name="toast_password_copied">密码已复制!</string>
    <string name="toast_sec_ans_copied">密保答案易复制!</string>
    <string name="toast_url_single_tab">正在打开链接...</string>
    <string name="toast_url_long_press">重定向到浏览器...</string>
    <string name="dialog_no_value_found_title">提示</string>
    <string name="dialog_no_value_found_msg">未发现.</string>
    <string name="toast_psw_display_on">密码显示启动</string>
    <string name="toast_psw_display_off">密码隐藏启动</string>
    <string name="toast_group_search_on">分组搜索启动</string>
    <string name="toast_group_search_off">分组搜索关闭</string>
    <string name="toast_key_search_on">密码搜索启动</string>
    <string name="toast_key_search_off">密码搜索关闭</string>
    <string name="toast_copy_outside_app_on">允许应用外复制</string>
    <string name="toast_copy_outside_app_off">禁止应用外复制</string>
    <string name="dialog_set_master_key_alert">请设置管理密码.</string>
    <string name="toast_master_key_created">管理密码添加成功!</string>
    <string name="toast_master_key_updated">管理密码更新成功!</string>
    <string name="toast_master_key_wrong_entry">管理密码不匹配.</string>
    <string name="toast_master_key_unmatch_new_confirm">密码不匹配.</string>
    <string name="dialog_backup_delete">确定要删除该备份吗?</string>
    <string name="dialog_backup_restore">确定要恢复该备份吗?</string>
    <string name="toast_backup_restore">该备份恢复成功!</string>
    <string name="dialog_backup_empty">找不到有效的备份文件.</string>
    <string name="toast_backup_delete">该备份已删除!</string>
    <string name="toast_backup">备份成功!</string>
    <string name="dialog_trash_delete_group">你确定要删除给分组吗?</string>
    <string name="dialog_trash_restore_group">确定恢复该分组吗?</string>
    <string name="dialog_trash_delete_key">确定要删除该密码吗?</string>
    <string name="dialog_trash_restore_key">确定要恢复该密码吗?</string>
    <string name="toast_trash_restore_group_success">分组恢复成功!</string>
    <string name="toast_trash_delete_group_success">分组删除成功!</string>
    <string name="toast_trash_restore_key_success">密码恢复成功!</string>
    <string name="toast_trash_delete_key_success">密码删除成功!</string>
    <string name="dialog_trash_no_item_title">提示</string>
    <string name="dialog_trash_no_item_msg">找不到有效项.</string>
    <string name="dialog_empty_trash_msg">确定要清空回收站中的分组和密码吗？清空后不能恢复</string>
    <string name="toast_empty_trash_msg">回收站已清空.</string>
    <string name="dialog_template_delete_field_title" />
    <string name="dialog_template_delete_field_msg">删除该条目将同时删除与之相关的所有数据.</string>
    <string name="dialog_template_duplicate_field">该条目已存在.</string>
    <string name="custom_template_help_content">通过自定义模板添加你需要的条目，只需要点击添加，输入条目名称即可.</string>
    <string name="dialog_entry_page_incorrect_master_key">管理密码错误!</string>
    <string name="dialog_entry_page_incorrect_security_ans">密保问题不匹配.</string>
</resources>
