<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/relativeLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/template" />
    <LinearLayout android:orientation="vertical" android:id="@id/linearLayout_add_group" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="50.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
        <View android:background="#ffff8e0d" android:layout_width="fill_parent" android:layout_height="2.0dip" />
        <LinearLayout android:orientation="vertical" android:id="@id/linearLayout_view_group_content" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="50.0dip">
            <EditText android:textColorHint="#ffd3d3d3" android:id="@id/txt_group_name" android:background="@drawable/edittext_innershadow" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="30.0dip" android:hint="@string/txt_groupTitle" android:maxLength="20" android:inputType="textCapWords" />
            <EditText android:textColorHint="#ffd3d3d3" android:gravity="top" android:id="@id/txt_group_desc" android:background="@drawable/edittext_innershadow_long" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="100.0dip" android:layout_marginTop="10.0dip" android:hint="@string/txt_groupDesc" android:inputType="textCapSentences" />
            <LinearLayout android:gravity="right" android:orientation="horizontal" android:id="@id/linearLayout_btn_edit_cancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <Button android:textSize="24.0dip" android:textColor="@color/textview_style" android:id="@id/btn_edit" android:background="@null" android:layout_width="wrap_content" android:layout_height="35.0dip" android:text="@string/btn_edit" />
                <View android:background="#ff000000" android:layout_width="1.0dip" android:layout_height="35.0dip" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" />
                <Button android:textSize="24.0dip" android:textColor="@color/textview_style_gray" android:id="@id/btn_view_group_cancel" android:background="@null" android:layout_width="wrap_content" android:layout_height="35.0dip" android:text="@string/btn_cancel" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>