<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/relativeLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/template" />
    <LinearLayout android:orientation="vertical" android:id="@id/linearLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="50.0dip" android:layout_marginBottom="50.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
        <View android:background="#ffff8e0d" android:layout_width="fill_parent" android:layout_height="2.0dip" />
        <ScrollView android:id="@id/scrollView1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip">
            <LinearLayout android:orientation="vertical" android:id="@id/linearLayout_view_key_content" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="20.0dip">
                <TextView android:textColor="#ff000000" android:id="@id/txt_select_group" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/txt_select_group" />
                <Spinner android:id="@id/spinner_grouplist" android:background="@drawable/custom_spinner_disable" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                <LinearLayout android:orientation="vertical" android:id="@id/linearLayout_edittexts" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                <LinearLayout android:gravity="right" android:orientation="horizontal" android:id="@id/linearLayout_btn_edit_cancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                    <Button android:textSize="24.0dip" android:textColor="@color/textview_style" android:layout_gravity="right" android:id="@id/btn_edit" android:background="@null" android:layout_width="wrap_content" android:layout_height="35.0dip" android:text="@string/btn_edit" />
                    <View android:background="#ff000000" android:layout_width="1.0dip" android:layout_height="35.0dip" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" />
                    <Button android:textSize="24.0dip" android:textColor="@color/textview_style_gray" android:id="@id/btn_view_key_cancel" android:background="@null" android:layout_width="wrap_content" android:layout_height="35.0dip" android:text="@string/btn_cancel" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>