<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/layout_group_item" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <ImageView android:id="@id/group_icon" android:visibility="visible" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:src="@drawable/group_footer_gray" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@string/txt_img_description" />
        <CheckBox android:id="@id/checkBox_group" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.5dip" android:button="@drawable/checkbox_selector" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentBottom="true" />
        <TextView android:textSize="22.0dip" android:textColor="@color/text_content_style" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/group_name" android:paddingLeft="40.0dip" android:paddingRight="90.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/txt_groupName" android:singleLine="true" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <LinearLayout android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true" android:layout_centerVertical="true">
            <TextView android:textSize="20.0dip" android:textStyle="bold" android:textColor="#ffb5b5b5" android:layout_gravity="center_vertical" android:id="@id/key_size" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_group_key" />
            <View android:id="@id/view_trash_group_seperator" android:background="#ffcccccc" android:layout_width="0.5dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" />
            <ImageButton android:id="@id/img_trash_restore" android:background="@null" android:paddingLeft="10.0dip" android:paddingRight="2.5dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/custom_keytool_restore" />
            <ImageButton android:id="@id/img_trash_delete" android:background="@null" android:paddingLeft="2.5dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/custom_tool_delete" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>