<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/relativeLayout1" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentLeft="true" android:layout_alignParentRight="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/template" />
    <LinearLayout android:orientation="vertical" android:id="@id/linearLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="50.0dip" android:layout_marginBottom="50.0dip">
        <LinearLayout android:orientation="vertical" android:id="@id/linearLayout_headertooltap" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:id="@id/linearLayout_tooltap_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="42.0dip">
                <View android:background="#ffcccccc" android:layout_width="fill_parent" android:layout_height="0.5dip" />
                <RelativeLayout android:background="#ffefefef" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <ViewFlipper android:id="@id/flipper" android:layout_width="fill_parent" android:layout_height="fill_parent"
                      xmlns:android="http://schemas.android.com/apk/res/android">
                        <LinearLayout android:gravity="right" android:orientation="horizontal" android:id="@id/linearLayout_innertool_tab" android:background="#ffefefef" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="3.0">
                            <LinearLayout android:gravity="right" android:orientation="horizontal" android:background="@drawable/custom_tooltab_pressed" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
                            <LinearLayout android:gravity="right" android:orientation="horizontal" android:id="@id/linearLayout_tooltab_checkbox" android:background="@drawable/custom_tooltab_pressed" android:layout_width="0.0dip" android:layout_height="fill_parent" android:weightSum="2.0" android:layout_weight="1.0" android:onClick="optionSelect">
                                <ImageButton android:layout_gravity="center_vertical" android:id="@id/img_tooltab_checkbox" android:background="@null" android:clickable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/tool_tab_checkbox" android:layout_weight="1.0" android:contentDescription="@string/txt_img_description" />
                                <TextView android:textSize="12.0dip" android:textColor="#ff000000" android:gravity="center_vertical" android:id="@id/txt_tooltab_checkbox" android:clickable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/tool_check" android:layout_weight="1.0" />
                            </LinearLayout>
                            <View android:background="#ffcccccc" android:layout_width="0.5dip" android:layout_height="fill_parent" />
                            <LinearLayout android:gravity="right" android:orientation="horizontal" android:id="@id/linearLayout_tooltab_recyclebin" android:background="@drawable/custom_tooltab_pressed" android:layout_width="0.0dip" android:layout_height="fill_parent" android:weightSum="2.0" android:layout_weight="1.0" android:onClick="optionRecycleBin">
                                <ImageButton android:layout_gravity="center_vertical" android:id="@id/img_tooltab_recyclebin" android:background="@null" android:clickable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/tool_tab_recycle" android:layout_weight="0.7" android:contentDescription="@string/txt_img_description" />
                                <TextView android:textSize="12.0dip" android:textColor="#ff000000" android:gravity="center_vertical" android:id="@id/txt_tooltab_recyclebin" android:clickable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="清空回收站" android:layout_weight="1.3" />
                            </LinearLayout>
                        </LinearLayout>
                        <LinearLayout android:orientation="horizontal" android:id="@id/linearLayout_checkbox_tooltab" android:background="#ffefefef" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="4.5">
                            <LinearLayout android:orientation="vertical" android:id="@id/linearLayout_tool_done" android:background="@drawable/custom_tooltab_pressed" android:layout_width="0.0dip" android:layout_height="fill_parent" android:weightSum="2.0" android:layout_weight="0.5" android:onClick="optionDone">
                                <ImageButton android:layout_gravity="center_vertical" android:id="@id/img_tool_done" android:background="@null" android:clickable="false" android:layout_width="fill_parent" android:layout_height="0.0dip" android:src="@drawable/back_arrow_gray" android:layout_weight="2.0" android:contentDescription="@string/txt_img_description" />
                            </LinearLayout>
                            <View android:background="#ffcccccc" android:layout_width="0.5dip" android:layout_height="fill_parent" />
                            <LinearLayout android:orientation="horizontal" android:id="@id/linearLayout_tool_select_all" android:background="@drawable/custom_tooltab_pressed" android:layout_width="0.0dip" android:layout_height="fill_parent" android:weightSum="2.0" android:layout_weight="1.0" android:onClick="optionSelectAll">
                                <ImageButton android:layout_gravity="center_vertical" android:id="@id/img_tool_select_all" android:background="@null" android:clickable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/tool_tab_checkbox" android:layout_weight="1.0" android:contentDescription="@string/txt_img_description" />
                                <TextView android:textSize="12.0dip" android:textColor="#ff000000" android:gravity="center_vertical" android:id="@id/txt_tool_select_all" android:clickable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/tool_select_all" android:layout_weight="1.0" />
                            </LinearLayout>
                            <View android:background="#ffcccccc" android:layout_width="0.5dip" android:layout_height="fill_parent" />
                            <LinearLayout android:orientation="horizontal" android:id="@id/linearLayout_tool_remove" android:background="@drawable/custom_tooltab_pressed" android:layout_width="0.0dip" android:layout_height="fill_parent" android:weightSum="2.0" android:layout_weight="1.0" android:onClick="optionRemove">
                                <ImageButton android:layout_gravity="center_vertical" android:id="@id/img_tool_remove" android:background="@null" android:clickable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/tool_remove" android:layout_weight="1.0" android:contentDescription="@string/txt_img_description" />
                                <TextView android:textSize="12.0dip" android:textColor="#ff000000" android:gravity="center_vertical" android:id="@id/txt_tool_remove" android:clickable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/tool_remove" android:layout_weight="1.0" />
                            </LinearLayout>
                            <View android:background="#ffcccccc" android:layout_width="0.5dip" android:layout_height="fill_parent" />
                            <LinearLayout android:orientation="horizontal" android:id="@id/linearLayout_tool_restore" android:background="@drawable/custom_tooltab_pressed" android:layout_width="0.0dip" android:layout_height="fill_parent" android:weightSum="2.0" android:layout_weight="1.0" android:onClick="optionRestore">
                                <ImageButton android:layout_gravity="center_vertical" android:id="@id/img_tool_restore" android:background="@null" android:clickable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/tool_restore" android:layout_weight="0.8" android:contentDescription="@string/txt_img_description" />
                                <TextView android:textSize="12.0dip" android:textColor="#ff000000" android:gravity="center_vertical" android:id="@id/txt_tool_restore" android:clickable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/tool_restore" android:layout_weight="1.2" />
                            </LinearLayout>
                        </LinearLayout>
                    </ViewFlipper>
                    <View android:id="@id/view1" android:background="@drawable/custom_transparent_view" android:layout_width="fill_parent" android:layout_height="15.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
                </RelativeLayout>
            </LinearLayout>
            <View android:background="#ffff8e0d" android:layout_width="fill_parent" android:layout_height="2.0dip" />
        </LinearLayout>
        <RelativeLayout android:background="#ffefefef" android:layout_width="fill_parent" android:layout_height="50.0dip">
            <LinearLayout android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
                <LinearLayout android:gravity="center" android:id="@id/btn_group_tab" android:background="@drawable/trash_tab_bg" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="150.0dip" android:layout_height="fill_parent" android:layout_marginTop="8.0dip" android:layout_marginRight="-16.0dip" android:onClick="groupTab">
                    <ImageView android:id="@id/img_group_tab_icon" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:src="@drawable/group_footer_blue" android:contentDescription="@string/txt_img_description" />
                    <TextView android:textSize="24.0dip" android:textColor="#ff050505" android:id="@id/txt_group_tab" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="2.0dip" android:text="@string/txt_group" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:id="@id/btn_key_tab" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="150.0dip" android:layout_height="fill_parent" android:layout_marginTop="8.0dip" android:onClick="keyTab">
                    <ImageView android:id="@id/img_key_tab_icon" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:src="@drawable/key_footer_gray" android:contentDescription="@string/txt_img_description" />
                    <TextView android:textSize="24.0dip" android:textColor="#ff777777" android:id="@id/txt_key_tab" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="2.0dip" android:text="@string/txt_key" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout android:id="@id/linearLayout_group_listview" android:background="#ffffffff" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ListView android:id="@id/list_recyclebin_group" android:background="#00000000" android:fadingEdge="none" android:layoutAnimation="@anim/slide_in_left_item" android:layout_width="fill_parent" android:layout_height="fill_parent" android:textFilterEnabled="true" android:cacheColorHint="#00000000" android:divider="#ffcccccc" android:dividerHeight="0.5dip" />
        </LinearLayout>
        <LinearLayout android:id="@id/linearLayout_key_listview" android:background="#ffffffff" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ListView android:id="@id/list_recyclebin_key" android:background="#00000000" android:fadingEdge="none" android:layoutAnimation="@anim/slide_in_left_item" android:layout_width="fill_parent" android:layout_height="fill_parent" android:textFilterEnabled="true" android:cacheColorHint="#00000000" android:divider="#ffcccccc" android:dividerHeight="0.5dip" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>